# gert

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: realease.yml  release.yml
src/: auth.rs  download.rs  errors.rs  main.rs  structs.rs  structures.rs  subreddit.rs  user.rs  utils.rs
tests/: cli_tests.rs
