[package]
name = "gert"
version = "0.2.0"
authors = ["Mike Dallas <mcdallas@protonmail.com>"]
description = "CLI tool to download media from Reddit"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcdallas/gert"
repository = "https://github.com/mcdallas/gert"
keywords = ["cli", "reddit", "images"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11.2", features = ["json", "cookies"] }
tokio = { version = "1.21.2", features = ["full"] }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
dotenv = "0.15.0"
md5 = "0.7.0"
log = "0.4.11"
env_logger = "0.8.2"
futures = "0.3.8"
clap = "2.33.3"
url = "2.2.0"
tempfile = "3.2.0"
which = "4.2.2"
mime = "0.3.16"
regex = "1.6.0"
thiserror = "1.0"
zip = "0.6.3"
anyhow = "1.0.66"
